--- a/05-maintain-site.yml
+++ b/05-maintain-site.yml
@@ -8,5 +8,5 @@
   - name: update maintenance
     copy:
      src: maiantain.html
-     dest: /var/www/html/index.html
+     dest: /var/www/html/
 ...
