--- a/07-condition.yml
+++ b/07-condition.yml
@@ -5,40 +5,40 @@
   become: yes
 
   tasks:
-  - name: install HTTPD
-    yum:
-      name: httpd
-      state: present
-    when: ansible_distributon == "Amazon"
+    - name: Install httpd (Amazon)
+      yum:
+        name: httpd
+        state: present
+      when: ansible_distribution == "Amazon"
 
-  - name: Start Httpd
-    service:
-      name: httpd
-      state: started
-    when: ansible_distributon == "Amazon"
-    
-  - name: Enable httpd
-    service:
-      name: httpd
-      enabled: yes
-    when: ansible_distributon == "Amazon"
+    - name: Start httpd
+      service:
+        name: httpd
+        state: started
+      when: ansible_distribution == "Amazon"
 
-  - name: install Apache2
-    apt:
-      name: apache2
-      state: present
-    when: ansible_distributon == "Ubuntu"
-    
-  - name: Start apache2
-    service:
-      name: apache2
-      state: started
-    when: ansible_distributon == "Ubuntu"
-    
-  - name: Enable apache2
-    service:
-      name: apache2
-      enabled: yes
-    when: ansible_distributon == "Ubuntu"
+    - name: Enable httpd
+      service:
+        name: httpd
+        enabled: yes
+      when: ansible_distribution == "Amazon"
+
+    - name: Install apache2 (Ubuntu)
+      apt:
+        name: apache2
+        state: present
+      when: ansible_distribution == "Ubuntu"
+
+    - name: Start apache2
+      service:
+        name: apache2
+        state: started
+      when: ansible_distribution == "Ubuntu"
+
+    - name: Enable apache2
+      service:
+        name: apache2
+        enabled: yes
+      when: ansible_distribution == "Ubuntu"
 
 ...
